[workspace]
members = [
    "bitbelay",
    "bitbelay-cli",
    "bitbelay-providers",
    "bitbelay-report",
    "bitbelay-statistics",
    "bitbelay-suites",
    "bitbelay-tests",
]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
documentation = "https://docs.rs/bitbelay"
readme = "README.md"
repository = "https://github.com/claymcleod/bitbelay"

[workspace.dependencies]
anyhow = "1.0.76"
approx = "0.5.1"
bitvec = "1.0.1"
byte-unit = "5.1.2"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.4.0"
nonempty = "0.9.0"
ordered-float = "4.2.0"
pretty_assertions = "1"
rand = "0.8.5"
statrs = "0.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
missing_docs_in_private_items = "warn"

[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false

[profile.profiling]
inherits = "release"
debug = true
