[package]
name = "bitbelay-providers"
version = "0.1.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "Data providers for the `bitbelay` package ecosystem"
edition.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
rand.workspace = true

[lints]
workspace = true
