[package]
name = "bitbelay-statistics"
version = "0.1.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "Statistics facilities for the `bitbelay` package ecosystem"
edition.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
statrs = "0.16.0"

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./html/docs.html"]
