[package]
name = "bitbelay-suites"
version = "0.1.0"
authors = ["Clay McLeod <clay.l.mcleod@gmail.com>"]
description = "Test suites for the `bitbelay` package ecosystem"
edition.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bitbelay-providers = { path = "../bitbelay-providers", version = "0.1.0" }
bitbelay-report = { path = "../bitbelay-report", version = "0.1.0" }
bitbelay-statistics = { path = "../bitbelay-statistics", version = "0.1.0" }
bitbelay-tests = { path = "../bitbelay-tests", version = "0.1.0" }
byte-unit.workspace = true
statrs.workspace = true
tracing.workspace = true

[lints]
workspace = true
